[package]
name = "serial_int"
description = "Safe, easy-to-use auto-increment integers"
categories = [ "no-std" ]
keywords = [
    "serial",
    "auto-increment",
    "id",
    "uuid",
    "integer"
]
version = "0.2.2"
authors = ["Jeff Anderson"]
edition = "2018"
repository = "https://git.sr.ht/~jeffa/serial_int"
license = "MIT"

[dev-dependencies]
lazy_static = "^1"
