[package]
name = "serial_int"
description = "Safe, easy-to-use auto-increment integers"
categories = ["no-std"]
keywords = [
    "serial",
    "auto-increment",
    "id",
    "uuid",
    "integer"
]
version = "0.3.1"
authors = ["Jeff Anderson"]
edition = "2018"
repository = "https://git.sr.ht/~jeffa/serial_int"
license = "MIT"

[features]
serde_impl = ["serde"]

[dependencies]
    [dependencies.serde]
    version = "*"
    features = ["derive"]
    optional = true

[dev-dependencies]
lazy_static = "^1"
toml = "0.5"
