[package]
name = "serial_int"
description = "Safe, easy-to-use auto-increment integers"
categories = ["no-std"]
keywords = [
    "serial",
    "auto-increment",
    "id",
    "uuid",
    "integer"
]
version = "1.1.3"
authors = ["Jeff Anderson"]
edition = "2021"
repository = "https://git.sr.ht/~jeffa/serial_int"
license = "MIT"

[features]
serde_impl = ["serde"]

[dependencies]
    [dependencies.serde]
    version = "^1"
    features = ["derive"]
    optional = true

[dev-dependencies]
lazy_static = "^1"
toml = "0.5"
